# diatom-io

.devcontainer/: devcontainer.json
client/: .gitignore  Cargo.toml  build.sh  index.html  netlify.toml  run.sh
client/assets/: index.css
client/src/: context.rs  draw.rs  entity.rs  game.rs  lib.rs  listeners.rs  mockup.rs  util.rs
game-client/: Cargo.toml  index.html  main.css
game-client/src/: main.rs  protocol.rs
game-server/: Cargo.toml
game_client/: Cargo.toml  index.html
game_client/src/: lib.rs  main.rs
game_server/src/: main.rs  protocol.rs
new_game_server/: Cargo.toml
new_game_server/src/: main.rs  protocol.rs
server/: .vimspector.json  Cargo.toml
server/src/: main.rs
server/src/game/: ball.rs  definitions.rs  entity.rs  game.rs  hashgrid.rs  mod.rs  rect.rs  up_search_quadtree.rs
server/src/network/: events.rs  messages.rs  mod.rs  protocol.rs  server.rs
