[package]
name = "diatom-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"
gloo-events = "0.2.0"
gloo-utils = "0.2.0"

[dependencies.web-sys]
version = "0.3.68"
features = [
  "BinaryType",
  "MessageEvent",
  "KeyboardEvent",
  "WebSocket",
  "Window",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "CloseEvent",
  "HtmlCanvasElement",
]
