[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full", "time"] }
tokio-tungstenite = "0.21.0"
