[package]
name = "game-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo = "0.11.0"
gloo-events = "0.2.0"
gloo-net = "0.5.0"
gloo-render = "0.2.0"
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.68"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "KeyboardEvent",
  "WebSocket",
  "console",
  "Window",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Performance"
]
