[package]
name = "game-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.68"
features = [
  "BinaryType",
  "MessageEvent",
  "KeyboardEvent",
  "WebSocket",
  "Window",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
]
