[package]
name = "diatom-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
grid = "0.11"
serde_json = "1.0.115"
warp = "0.3.6"
